# renaapa

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: benchmark_linux_gcc.yml  build_linux_gcc.yml  build_mac_clang.yml  build_macos_clang.yml  build_windows_mingw.yml  build_windows_msvc.yml
benchmark/: CMakeLists.txt  benchmark_renaapa.cpp  lns.h
cmake/: add_benchmark_executable.cmake  add_test_executable.cmake  download_google_benchmark.cmake
include/rena/: renaapa.h  renaapa_errcodes.h  renaapa_exceptions.h
src/: CMakeLists.txt  digit.cpp  lint.cpp  lint_arith.cpp  lint_comp.cpp
src/builtin/: fft.cpp  fft.h  safe_arith.h
test/: CMakeLists.txt  test_digit.cpp  test_lint_add_sub.cpp  test_lint_value_compare.cpp  test_lint_value_init_get.cpp
